# evw

./: .gitignore  CMakeLists.txt  FCFFBuilder.py  LongCSVReader.py  README.md
backend/: requirements.txt
backend/output/AAPL/: fcff_components.csv  wide_financials.csv
backend/src/: LongCSVReader.py  fs_accessor.py  main.py  margins.py  roa.py  roe.py
backend/src/core/: __init__.py  fs_accessor.py
backend/src/ratios/: __init__.py  efficiency.py  growth.py  leverage.py  liquidity.py  profitability.py
backend/src/valuation/: __init__.py  valuation.py  wacc.py
data/: aapl.csv  example.csv
include/evw/: CSVReader.hpp
src/: CSVReader.cpp  main.cpp
